themes/odsherredsub/css/odsherredsub-alpha-default.css
/* This file will hold styles for all layouts using the alpha grid (i.e. not the mobile layout). */

/* This file will hold styles for the mobile version of your website (mobile first). */
/* This also can include ANY global CSS that applies site-wide. Unless overwritten by a more specific style rule, CSS declarations in global.css will apply site-wide. */
@font-face {
  font-family: 'FontAwesome';
  src: url('font-awesome/font/fontawesome-webfont.eot?v=3.2.1');
  src: url('font-awesome/font/fontawesome-webfont.eot?#iefix&v=3.2.1') format('embedded-opentype'), url('font-awesome/font/fontawesome-webfont.woff?v=3.2.1') format('woff'), url('font-awesome/font/fontawesome-webfont.ttf?v=3.2.1') format('truetype'), url('font-awesome/font/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1') format('svg');
  font-weight: normal;
  font-style: normal;
}
body { font-size: 14px;}
a,
a:link,
a:visited {  color: #000; text-decoration: none !important;}
h2 { font-size: 20px;}
.hbg p { font-size: 14px;}
.front h1.title { display: none}
.hbg, #region-sidebar-first .block, .page-node .panel-node, .page-search #region-content, #section-footer .region { 
	background-color: #FFF;}
.page-node-add #region-content .region-inner { 
	background-color: #FFF; padding: 10px;}

.front .pane-kontaktblok .pane-content { background-image: url(img/kontaktboksbg.png); background-repeat: no-repeat; padding-top: 7px;}

.pad20 { padding: 20px}
.pad15 { padding: 15px}
.pad10 { padding: 10px}
.pad5 { padding: 5px}

.margin-bund-20 { margin-bottom: 20px}

.front .view-seneste-ny .views-row { clear: both; margin-bottom: 10px; min-height: 90px; border-bottom: 1px solid #dcdcdc; padding-bottom: 10px;}
.front .view-seneste-ny .views-row-last { border-bottom: none;}
.front .view-seneste-ny .billede { float: left; margin-right: 20px; }
#region-sidebar-first ul.menu { margin: 10px;}
#region-sidebar-first ul.menu li ul { margin: 0;}
#zone-content-wrapper { min-height: 363px;
}
#region-content { min-height: 325px;}
#section-header, #zone-branding  { 
	background-image: none !important;
}
#section-content { background-image: url(img/section-content-bg.png); background-position: center 12px; background-repeat: no-repeat}
.logo-img { margin-top: 0px !important;}
#region-branding { height: 85px !important;}

#region-preface-first { margin-bottom: 10px;}
.view-banner { border: 5px solid #FFF; position: relative; background-color: #FFF;}
.view-banner h3 { 
	position: absolute; 
	top: 0; left: 0; 
	font-size: 40px; 
	max-width: 100%; height: auto; max-height: 100%;
	width: 100%; height: 100%; display: block; text-decoration: none; background-clip:padding-box; background-image: url(img/TopImageOverlay.png);}

.view-banner h3 {height: 265px; width: 42%; padding-left: 3%; padding-right: 55%; padding-top: 15px; ;z-index: 200; text-decoration: none; color: #FFF !important; font-weight: normal; font-style: italic; line-height: 42px;}

.view-banner h3 a {display: block; text-decoration: none; color: #FFF !important; font-weight: normal; font-style: italic; line-height: 42px;}

.not-front #region-content .region-content-inner { }
.node-type-subsite-nyhed .region-content-inner { padding: 10px; background-color: #FFF}
.node-type-subsite-nyhed .field-name-body { margin-top: 20px;}
.node-type-page .panel-display.panel-node { padding: 5px}

.view-banner .views-slideshow-controls-text.views_slideshow_controls_text,
.view-banner .background-images {display: block !important}

.view-banner img.banner { max-width: 100%; height: auto; max-height: 100%;}

#views_slideshow_controls_text_pause_banner-block { display: none}
#views_slideshow_controls_text_previous_banner-block { position: absolute; bottom: 30px; left: 20px; z-index: 99; text-indent: 99999px; background-image: url(img/arrow-left-white.png); width: 13px; height: 11px; overflow: hidden}
#views_slideshow_controls_text_next_banner-block { position: absolute; bottom: 30px; left: 50px; z-index: 99;text-indent: 99999px; background-image: url(img/arrow-right-white.png); width: 13px; height: 11px; overflow: hidden}

.front .region-header-first-inner { padding-left: 0 !important;}

#block-system-main .field-type-text-long.field-name-field-field-resume-long { font-size: 15px;}


.section-header .block-search { background-color: transparent;}
.section-header .block-search .form-type-textfield input { background-color: #FFF; color: #333;;}

.section-header .block-search { 
	height: 44px;
	padding: 0 0 0 10px;
	background-repeat: no-repeat;
	padding: 5px;
	}

.section-header .block-search input[type="submit"] {
	overflow: visible;
	padding: 0;
	margin: 0;
	width: 36px;
	height: 32px;
	outline: 0;
	border: none;
	border-color: none;
	-webkit-border-radius: 0;
	-moz-border-radius: 0;
	border-radius: 0;
	background: transparent url(green/search-btn.png) no-repeat;
	color: #333;
	text-shadow: none;
	font: bold 12px/1.2 Arial, sans-serif;
	cursor: pointer;
	-webkit-appearance: none;
	-moz-background-clip: padding;
	-webkit-background-clip: padding;
	text-indent: -9999999px;
	}

.section-header .block-search input[type="text"] {
	height: 34px;
	background-color: transparent;
	font-size: 14px;
	margin-right: 0;
	padding-right: 0;
	border: none;
	border-top-left-radius: 5px;
	border-bottom-left-radius: 5px;
	padding-left: 10px;
	float: left;
	background-repeat: no-repeat;
	}
	
#region-sidebar-first .block {
	padding-top: 2px; }
	
#region-user-first { height: auto !important}
#region-header-second { padding-bottom: 10px !important; padding-top: 30px !important; height: 15px !important; }
#region-user-first a, #region-header-second a { color: #000 !important}


.view-kontaktblok a { text-decoration: none;}
.view-kontaktblok h3 { margin-bottom: 15px;}
.view-kontaktblok .views-field-field-email { margin-bottom: 10px; margin-top: 10px;}
.view-kontaktblok .ean { margin-top: 10px;}

.site-slogan { 
	float: right; 
	font-style: italic; 
	margin-right: 10px;
	font-size: 15px;
}

.view-spotbokse .views-row { position: relative ; font-size: 12px; width: 212px; height: 187px;}
.pane-views-panes .view-spotbokse .views-row { float: left; margin: 20px 10px; padding: 5px;background-color: #FFF;}
.pane-views-panes .view-spotbokse .views-row.views-row-last { margin-right: 6px; }
.pane-views-panes .view-spotbokse .views-row-1, .pane-views-panes .view-spotbokse .views-row-4, .pane-views-panes .view-spotbokse .views-row-7, .pane-views-panes .view-spotbokse .views-row-10 { margin-left: 0px}
.pane-views-panes .view-spotbokse .views-row-3, .pane-views-panes .view-spotbokse .views-row-6, .pane-views-panes .view-spotbokse .views-row-9, .pane-views-panes .view-spotbokse .views-row-12 { margin-right: 0px}
.view-spotbokse .resten a:link,
.view-spotbokse .resten a:visited { color: #000 !important;}

.view-spotbokse a {text-decoration: none !important; }
.views-field-field-email a { font-weight: bold}

.view-spotbokse .ekstratekst { position: absolute; bottom: 5px; background-image:url(img/spot-tekst-bg.png); width: 212px}
.view-spotbokse .ekstratekst .titel { display: block; font-size: 14px; border-top: 4px solid #00538F; padding: 5px 10px; }
.view-spotbokse .ekstratekst .resten { display: block; padding: 0 10px 5px; }
 
.view-spotbokse .billede { position: absolute ;}
.front .view-spotbokse .ekstratekst { bottom: 0px;} 
.pane-node-field-field-resume-long {
	font-style: italic;
	color: #666;
	font-size: 15px;
	} 
.pane-node-field-alternativt-billede {float: right; margin-bottom: 15px;}

.media_embed iframe { max-width: 100%; min-width: 100%;}

/*.not-front #region-content .region-inner { background-color: #FFF; padding-left: 10px; padding-right: 10px}
*/
.page-nyheder .views-row { clear: both; margin-bottom: 10px; padding-bottom: 10px; border-top: 1px solid #555}
.page-nyheder .views-row-1 { border-top: none}
.page-nyheder .views-row p { margin-bottom: 0px; }
.page-nyheder .billede { float: left; clear: both; margin-bottom: 25px; margin-right: 10px; }
.page-nyheder .views-more-link {float: right; margin-bottom: 10px; }

.views-field-field-traeffetid .item-list li { margin-left: 0; padding-left: 0;}

.page-node #block-system-main .panel-region-stack1 {padding: 0}
.not-front .panel-region-stack1 .panel-pane { padding: 10px 0px 10px 10px;}

#section-footer { position: relative !important; margin-top: 10px;}

#region-footer-first .region-inner { padding: 5px 5px 10px 12px;  background-image: url(img/footer-bg-odsherred.png); background-repeat: no-repeat; height: 55px }

.ods-logo a { float: right;  width: 136px; height: 66px; text-indent: -10000px;display: block;}
.ods-link { padding-top: 35px;}

#region-sidebar-first ul.menu li {
  background-image: none;
  padding-left: 0px;
}

#region-sidebar-first ul.menu li:before{
  font-family: FontAwesome;
  font-weight: normal;
  font-style: normal;
  text-decoration: inherit;
  -webkit-font-smoothing: antialiased;
  *margin-right: .3em;
  
  content: "\f105" !important;
  font-size: 20px;
  line-height: 14px;
  padding-right: 10px;
  padding-left: 6px;
}

#region-sidebar-first ul.menu li.expanded:before{
  content: "\f107" !important;
  padding-left: 0px;
}

#region-sidebar-first ul.menu li ul li:before {
  content: "\f111" !important;
  font-size: 10px;
} 

.front .pane-spotbokse { position: absolute; width: 212px; }

#toolbar a { color: #FFF !important}

#zone-content {
padding-top: 10px ;}

.slider_left{
  background: url('img/tilbage_odsherredDK.png');
  height: 148px;
}

.pane-node-field-filer img {
    display: none;
}

.pane-node-field-filer,
.pane-selvbetjening-panel-pane-1 {
    float: left;
    width: 50%;
}

#region-sidebar-first ul.menu li.expanded, 
#region-sidebar-first ul.menu li ul li { background-image: none !important}

.not-front .view-kontaktblok { margin-top: 20px; }
.not-front .view-kontaktblok .hbg { padding: 5px; min-height: 187px; margin-top: 1px;  }

.views-slideshow-cycle-main-frame,
.views-slideshow-cycle-main-frame-row { height: 280px; width: 930px;}
}

.borger_dk_header { padding: 10px;}

.view-id-seneste_ny .views-field-title { font-size: 14px; font-weight: bold;}

#block-gtranslate-gtranslate .content { padding-left: 15px; padding-bottom: 15px; padding-top: 15px;}

